--- a/src/Frontend/App.css
+++ b/src/Frontend/App.css
@@ -1,12 +1,30 @@
 .TempStyles {
   font-size: xx-large;
   font-weight: 10000;
-  color: white;
+  color: black;
   padding: 20px,20px, 20px, 20px;
   margin: 20px;
 }
 
 .App {
-  background-color: #282c34;
+  /* background-color: #424141; */
+  background-image: url(redYellow.jpeg);
+  background-size:cover;
+  background-repeat: no-repeat;
+  /* width: 1170px;
+  height: 850px; */
+  /* margin-left: auto;
+  margin-right: auto; */
   min-height: 100vh;
+  overflow: auto;
+}
+
+.centerJust {
+  display: inline-grid;
+}
+
+.weatherIcon {
+  display: flex;
+  margin: auto;
+  justify-content: center;
 }
