--- a/src/Frontend/App.css
+++ b/src/Frontend/App.css
@@ -7,14 +7,9 @@
 }
 
 .App {
-  /* background-color: #424141; */
   background-image: url(redYellow.jpeg);
   background-size:cover;
   background-repeat: no-repeat;
-  /* width: 1170px;
-  height: 850px; */
-  /* margin-left: auto;
-  margin-right: auto; */
   min-height: 100vh;
   overflow: auto;
 }
@@ -27,4 +22,18 @@
   display: flex;
   margin: auto;
   justify-content: center;
+}
+
+.saveDataButton {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  margin-bottom: 20px;
+  font-size: xx-large;
+  font-weight: 10000;
+  color: black;
+  border-radius: 40px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color:cyan;
 }
